k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: <NAMESPACE>
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: <NAMESPACE>.codedjen.io
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 80
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api
            port:
              number: 80
  tls:
  - hosts:
    - "*.codedjen.io"
    secretName: codedjen-user-deployments-tls
